library/general/block-wildcard-ingress/suite.yaml
kind: Suite
apiVersion: test.gatekeeper.sh/v1alpha1
metadata:
  name: block-wildcard-ingress
tests:
- name: block-wildcard-ingress
  template: template.yaml
  constraint: samples/block-wildcard-ingress/constraint.yaml
  cases:
  - name: example-allowed
    object: samples/block-wildcard-ingress/example_allowed.yaml
    assertions:
    - violations: 0
  - name: example-disallowed
    object: samples/block-wildcard-ingress/example_disallowed.yaml
    assertions:
    - violations: 3
